# esdump-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.env  test.env
.github/: dependabot.yml
.github/workflows/: build.yaml  docker.yaml  release.yaml  test.yaml
seed-es-data/: Cargo.toml
seed-es-data/src/: main.rs
src/: compression.rs  elasticsearch.rs  main.rs  stats.rs  storage.rs  utils.rs
