[workspace]
resolver = "2"
default-members = ["."]
members = [".", "seed-es-data"]

[package]
name = "esdump-rs"
version = "0.1.0"
edition = "2021"

description = "Dump Elasticsearch indexes to object storage"
license = "MIT"
repository = "https://github.com/GitGuardian/esdump-rs/"

[dependencies]
elasticsearch = "8.5.0-alpha.1"
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1", features = ["raw_value"] }
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.0"
dotenv = "0.15.0"
clap = { version = "4.5.3", features = ["derive"] }
anyhow = "1.0.81"
uuid = { version = "1.8.0", features = ["v7"] }
indicatif = { version = "0.17.6", features = ["in_memory"] }
tracing-indicatif = "0.3.6"
tracing = { version = "0.1.37", features = ["release_max_level_debug"] }
tracing-core = "0.1.30"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
bytes = "1.6.0"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
object_store = { version = "0.10.1", features = ["aws", "gcp", "azure"] }
async-trait = "0.1.80"
zstd = "0.13.1"
human-duration = "0.1.0"
bytesize = "1.3.0"
log = "0.4.21"
byte-unit = { version = "5.1.4", features = ["serde"] }
clap-num = "1.1.1"

[profile.test]
opt-level = 1

